--- a/Youtube/play-video.html
+++ b/Youtube/play-video.html
@@ -72,6 +72,59 @@
                     <img src="img/Jack.png">
                     <input type="text" placeholder="Write comment">
                 </div>
+
+                <div class="old-comment">
+                    <img src="img/Jack.png">
+                    <div>
+                        <h3>Channel Name <span>2 days ago</span></h3>
+                        <p> Um dia a vida se´ra bela pois o hoje pe trites e o amanha nao 
+                            se apagara
+                        </p>
+                        <div class="comment-action">
+                            <img src="img/like.png">
+                            <span>44</span>
+                            <img src="img/dislike.png">
+                            <span>4</span>
+                            <span>REPLY</span>
+                            <a href="">All Replies</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="old-comment">
+                    <img src="img/Jack.png">
+                    <div>
+                        <h3>Channel Name <span>2 days ago</span></h3>
+                        <p> Um dia a vida se´ra bela pois o hoje pe trites e o amanha nao 
+                            se apagara
+                        </p>
+                        <div class="comment-action">
+                            <img src="img/like.png">
+                            <span>44</span>
+                            <img src="img/dislike.png">
+                            <span>4</span>
+                            <span>REPLY</span>
+                            <a href="">All Replies</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="old-comment">
+                    <img src="img/cameron.png">
+                    <div>
+                        <h3>Channel Name <span>3 days ago</span></h3>
+                        <p> 
+                            Na decodificação, cada código de caractere deve ser convertido no correspondente 
+                            caractere. A tabela de códigos deve ser injetiva (caracteres diferentes devem ter códigos diferentes). 
+                        </p>
+                        <div class="comment-action">
+                            <img src="img/like.png">
+                            <span>44</span>
+                            <img src="img/dislike.png">
+                            <span>4</span>
+                            <span>REPLY</span>
+                            <a href="">All Replies</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="right-sidebar">
